Updated the I18n File and the View Model

--- a/training/app/orders/webapp/i18n/i18n.properties
+++ b/training/app/orders/webapp/i18n/i18n.properties
@@ -8,4 +8,4 @@ appTitle=orders
 #YDES: Application description
 appDescription=An SAP Fiori application.
 #XTIT: Custom view title
-MainTitle=Main
+orderDetails=Order Details
